src/tests/snapshots/ciboulette2postgres__tests__test_sql__db_snapshot_insert_while_testing_query_params.snap
---
source: src/tests/test_sql.rs
expression: "serde_json::Value::Object(map)"

---
{
  "peoples": [
    {
      "id": "[uuid]",
      "first-name": "Francis",
      "last-name": "Le Roy",
      "favorite_color": "[favorite_color_uuid]",
      "age": 22,
      "gender": "M",
      "twitter": null
    },
    {
      "id": "[uuid]",
      "first-name": "Somebody",
      "last-name": "Wuhu",
      "favorite_color": "[favorite_color_uuid]",
      "age": 34,
      "gender": "F",
      "twitter": "@randomhandle"
    },
    {
      "id": "[uuid]",
      "first-name": "AAAAAAAA",
      "last-name": "BBBBBBBBB",
      "favorite_color": "[favorite_color_uuid]",
      "age": null,
      "gender": null,
      "twitter": null
    },
    {
      "id": "[uuid]",
      "first-name": "Hello",
      "last-name": "World",
      "favorite_color": "[favorite_color_null]",
      "age": 19,
      "gender": "M",
      "twitter": "@myhandle"
    }
  ],
  "people-article": [
    {
      "id": "[uuid]",
      "people_id": "[uuid]",
      "article_id": "[uuid]"
    },
    {
      "id": "[uuid]",
      "people_id": "[uuid]",
      "article_id": "[uuid]"
    },
    {
      "id": "[uuid]",
      "people_id": "[uuid]",
      "article_id": "[uuid]"
    },
    {
      "id": "[uuid]",
      "people_id": "[uuid]",
      "article_id": "[uuid]"
    }
  ],
  "favorite_color": [
    {
      "id": "[uuid]",
      "color": "red"
    },
    {
      "id": "[uuid]",
      "color": "blue"
    },
    {
      "id": "[uuid]",
      "color": "green"
    }
  ]
}
