src/tests/snapshots/ciboulette2postgres__tests__test_sql__db_snapshot_update_rels_while_testing_query_params.snap
---
source: src/tests/test_sql.rs
expression: "serde_json::Value::Object(map)"

---
{
  "comments": [
    {
      "id": "[uuid]",
      "body": "It was great !",
      "author": "[uuid]",
      "articles": "[uuid]"
    },
    {
      "id": "[uuid]",
      "body": "Vous savez, moi je ne crois pas qu\"il y ait de bonne ou de mauvaise situation. Moi, si je devais résumer ma vie aujourd\"hui avec vous, je dirais que c\"est d\"abord des rencontres. Des gens qui m\"ont tendu la main, peut-être à un moment où je ne pouvais pas, où j\"étais seul chez moi.",
      "author": "[uuid]",
      "articles": "[uuid]"
    },
    {
      "id": "[uuid]",
      "body": "Wasnt convinced...",
      "author": "[uuid]",
      "articles": "[uuid]"
    }
  ]
}
