src/tests/snapshots/ciboulette2postgres__tests__test_sql__insert_main_all_fields.snap
---
source: src/tests/test_sql.rs
expression: "serde_json::Value::Object(map)"

---
{
  "peoples": [
    {
      "id": "[uuid]",
      "first-name": "Hello",
      "last-name": "World",
      "favorite_color": "[favorite_color_null]",
      "age": 19,
      "gender": "M",
      "twitter": "@myhandle"
    }
  ],
  "people-article": null,
  "favorite_color": null
}
