src/tests/snapshots/ciboulette2postgres__tests__test_sql__insert_main_with_color.snap
---
source: src/tests/test_sql.rs
expression: "serde_json::Value::Object(map)"

---
{
  "peoples": [
    {
      "id": "[uuid]",
      "first-name": "Hello",
      "last-name": "World",
      "favorite_color": "[favorite_color_uuid]",
      "age": null,
      "gender": null,
      "twitter": null
    }
  ],
  "people-article": null,
  "favorite_color": [
    {
      "id": "[uuid]",
      "color": "red"
    }
  ]
}
