src/tests/snapshots/ciboulette2postgres__tests__test_sql__update_single_rel_unset_with_fields.snap
---
source: src/tests/test_sql.rs
expression: "serde_json::Value::Object(map)"

---
{
  "peoples": [
    {
      "id": "[uuid]",
      "first-name": "Somebody",
      "last-name": "Wuhu",
      "favorite_color": "[favorite_color_uuid]",
      "age": 34,
      "gender": "F",
      "twitter": "@randomhandle"
    },
    {
      "id": "[uuid]",
      "first-name": "AAAAAAAA",
      "last-name": "BBBBBBBBB",
      "favorite_color": "[favorite_color_uuid]",
      "age": null,
      "gender": null,
      "twitter": null
    },
    {
      "id": "[uuid]",
      "first-name": "New first",
      "last-name": "New last name",
      "favorite_color": "[favorite_color_null]",
      "age": 22,
      "gender": "M",
      "twitter": null
    }
  ]
}
